--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 		width:100vw;
 		height:100vh;
 		}
+		h1{
+			text-align: center;
+		}
+		h2{
+			text-align : center;
 	</style>
 </head>
 	<h1>
