--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		width:100vw;
 		height:100vh;
 		}
+		html {
+			height: 100%;
+		}
+		body {
+			background-image: linear-gradient(to bottom right, #33475b, #0033CC, #FF77CC, rgb(255, 122, 89));
+		}
 		h1{
 			text-align: center;
 		}
