--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	
 <body>
 	<!-- Embed Tableau Public presentation with embedded dashboard link -->
-	<iframe id="data" src="https://public.tableau.com/views/GlobalTerrorismAnalysis_16775613879950/Dashboard2?:language=en-GB&:display_count=n&:origin=viz_share_link:showVizHome=no&:embed=true" width=100vw height=100vh></iframe>
+	<center>
+		<iframe id="data" src="https://public.tableau.com/views/GlobalTerrorismAnalysis_16775613879950/Dashboard2?:language=en-GB&:display_count=n&:origin=viz_share_link:showVizHome=no&:embed=true" width=100vw height=100vh></iframe>
+	</center>
 </body>
 </html>
