--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		}
 		h2{
 			text-align : center;
+		}h3{
+			text-align : center;
+		}h3{
+			text-align : center;
 		}
 	</style>
 </head>
@@ -29,13 +33,13 @@
 	</h2>
 	<h3>
 		The objective of this project was to depict the Global terrorism count in each country, their weapons distribution and their attack type distribution.
+	</h3>
+	<h3>
 		This visualization is done to make the data easily accessible and understand, the rest of the data files are also embedded in the Github repository for furthur analysis.
 	</h3>
 	
 <body>
 	<!-- Embed Tableau Public presentation with embedded dashboard link -->
-	<center>
 		<iframe id="data" src="https://public.tableau.com/views/GlobalTerrorismAnalysis_16775613879950/Dashboard2?:language=en-GB&:display_count=n&:origin=viz_share_link:showVizHome=no&:embed=true" width=100vw height=100vh></iframe>
-	</center>
 </body>
 </html>
