--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
 	<h2>
 		ARYAN VATS
 	</h2>
-	<h3>
-		The objective of this project was to depict the Global terrorism count in each country, their weapons distribution and their attack type distribution.
-	</h3>
-	<h3>
-		This visualization is done to make the data easily accessible and understand, the rest of the data files are also embedded in the Github repository for furthur analysis.
-	</h3>
+	
+<marquee behavior="scroll" direction="left">The objective of this project was to depict the Global terrorism count in each country, their weapons distribution and their attack type distribution.</marquee>
+<marquee behavior="scroll" direction="left">This visualization is done to make the data easily accessible and understand, the rest of the data files are also embedded in the Github repository for furthur analysis.</marquee>
+
 	
 <body>
 	<!-- Embed Tableau Public presentation with embedded dashboard link -->
