--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		height:100vh;
 		}
 		html {
-			height: 100%;
+			height: 100vh;
 		}
 		body {
 			background-image: linear-gradient(to bottom right, #33475b, #0033CC, #FF77CC, rgb(255, 122, 89));
